# VoxelEngine

./: .gitignore  CMakeLists.txt  ConEmu.lnk  LICENSE  Makefile.bak  README.md  Sol_2_body.json  Sol_6_body.json  Sol_Full.json  cmd.exe - Shortcut.lnk  compile-debug.bat  compile-release.bat  compile.bat  compile.bat.bak  parse_json.vcxproj  parse_json.vcxproj.filters
GH/: ComponentSystem.c  ComponentSystem.h  ModuleSystem.c  ModuleSystem.h  exportlogic.h
GHEnvironment/: GH_TestFile.c  GH_TestFile.h  GH_TestFile2.c  GH_TestFile2.h
Header Files/: commonIncludes.inc.h  console.h  dynArray.h  generics.h  ghostymath.h  glext.h  matrix.h  noise.h  parse_json.h  parser.h  perlin.h  quaternion.h  start_menu.h  vec2.h  vec3.h  vec4.h  vector.h  window.h
Release/: Build.exp  Build.lib  Sol_2_body.json  modules.exp  modules.lib
Render/: MasterRenderer.c  MasterRenderer.h  initGLFuncs.c  initGLFuncs.h  shaderClass.c  shaderClass.h
Render/ComponentManagers/: CameraManager.c  CameraManager.h  ControlsManager.c  ControlsManager.h  EntityManager.c  EntityManager.h  WorldManager.c  WorldManager.h
Render/components/: cameraManager.component.c  cameraManager.component.h  controlsManager.component.c  controlsManager.component.h  entityManager.component.c  entityManager.component.h  mesh.component.c  mesh.component.h  physics.component.c  physics.component.h  worldManager.component.c  worldManager.component.h
Render/components/static/: staticChunkManager.component.c  staticChunkManager.component.h  staticRenderingVars.component.h  staticShaderManager.component.c  staticShaderManager.component.h  staticVoxelGeometry.component.c  staticVoxelGeometry.component.h
Resource Files/: config.h
Resource Files/configurations/: CameraSettings.cfg  PhysicsSettings.cfg  PlanetsData.cfg  WorldSettings.cfg  bodies.h  config.h
Resource Files/shaders/: fragmentShader.glsl  vertexShader.glsl  voxelFragmentShader.glsl  voxelGeometryShader.glsl  voxelVertexShader.glsl
Resource Files/shaders/requires/: random2d.glsl
baklol/: Debug.rar
parse_json.dir/Release/: parse_json.lib.recipe
parse_json.dir/Release/parse_json.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  parse_json.lastbuildstate
src/: Main.c
src/C-externals/: console.c  dynArray.c  generics.c  ghostymath.c  matrix.c  noise.c  parser.c  perlin.c  quaternion.c  start_menu.c  vec2.c  vec3.c  vec4.c  vector.c  window.c
